hphp/hack/test/typecheck/null_check_strict3.php.exp
File "null_check_strict3.php", line 6, characters 8-9:
You are using a sketchy null check on a primitive type ...
Use $x === null instead (Typing[4089])
